[package]
name = "mini-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
nix = "0.23.0"
polling = "2.2.0"
scoped-tls = "1.0.0"
tokio = { version = "1.14.0", features = ["full"] }
waker-fn = "1.1.0"

[features]
